2008-12-15  Bastien Nocera  <hadess@hadess.net>

	* cut-n-paste/e-contact-entry/e-contact-entry.c:
	* cut-n-paste/e-contact-entry/e-contact-entry.h: Update from SVN

2008-07-31  Bastien Nocera  <hadess@hadess.net>

	* libgsm/Makefile.am:
	* telepathy/Makefile.am: More warnings

	* libgsm/phonemgr-listener.c (phonemgr_listener_get_data),
	(phonemgr_listener_list_all_data), (phonemgr_listener_delete_data),
	(phonemgr_listener_put_data): Fix dummy build

2008-07-31  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: Enable warnings, yay for time wasting!

2008-06-20  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Print out an error if a delete failed
	* libgsm/phonemgr-listener.c (phonemgr_listener_get_data),
	(phonemgr_listener_delete_data): Finish implementing _get_data
	for calendar data, implement _delete_data for calendar,
	Fix retvals for deletion

2008-06-19  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Move the delivery report checkbox below
	the message entry (Closes: #538375)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_parse_data_uuid),
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data),
	(phonemgr_listener_delete_data): Change the retval from
	_parse_data_uuid() to avoid having to free the memory_type
	(fixes memory leaks)
	Use the same UUID format for calendar entries, but ignore the
	folder location element
	Fix getting the list of calendar items
	Implement getting calendar data (missing a function to transform
	the data into a vCal)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_get_phonebook_entry),
	(phonemgr_listener_list_all_data): Fix reversed retval in
	_get_phonebook_entry, Use the entry location to create the UUID,
	avoids problems with memory offsets in drivers

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Remove debug