@@ -46,7 +46,7 @@ PKG_CHECK_MODULES(TMP_EVO, libebook-1.2,
 PKG_CHECK_MODULES(LIBGSM, glib-2.0 gobject-2.0 $GNOKII_REQS gthread-2.0 bluez $evo_pc_file)
 
 PKG_CHECK_MODULES(PHONEMGR, gtk+-2.0 >= 2.10 glib-2.0 >= 2.13.0
-	gstreamer-0.10 gdk-pixbuf-2.0 gconf-2.0
+	libcanberra-gtk gdk-pixbuf-2.0 gconf-2.0
 	$GNOME_BLUETOOTH_REQS libglade-2.0 $evo_pc_file
 	gmodule-2.0 dbus-glib-1 gnome-icon-theme >= 2.19.1
 	gtkspell-2.0
